crates/biome_js_analyze/tests/specs/nursery/noPlaywrightUselessAwait/invalid/getByRole.js
/* should generate diagnostics */
await page.getByRole('button');

